Do not use the fallback output device as default in Pulse Audio.

The concept of default device in Pulse Audio is not very clear.
What the Pulse API reports as default device is actually a fallback
device to be used if no specific device is requested and the
PULSE_SINK environment variable has not been set.
A previous change to AudioManagerPulse made Chromium use the default
device reported by Pulse as default, which has caused problems for
users relying on PULSE_SINK.

A similar issue exists with the default input device and the
PULSE_SOURCE environment variable, but this CL does not address the
input case for two reasons:
1. Failing to recognize (and request) a specific default device makes it
difficult to properly support the groupId constrainable property in
getUserMedia().
2. Unlike PULSE_SINK, no issues have been reported so far with regards
to the use of the default input device and PULSE_SOURCE. If such issues
arise, it will be handled separately.


Bug: 880180
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I584b994f2dbd3a4da305bf25f513223af2478ca0
Reviewed-on: https://chromium-review.googlesource.com/1243183
Reviewed-by: Max Morin <maxmorin@chromium.org>
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#594257}(cherry picked from commit 514683729476dff1cd626165097e62f451135485 [formerly 41214a8f0d4dc8569a4a60b7a8c7f5d0cd93f7ed])
Reviewed-on: https://chromium-review.googlesource.com/c/1267075
Reviewed-by: Guido Urdaneta <guidou@chromium.org>
Cr-Commit-Position: refs/branch-heads/3538@{#883}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: 26dfe7728c07a94c98381a431714bb9627144efe